src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__library_ui_tests__tests__snapshot_tests__readarr_library_FilterAuthorsError.snap
---
source: src/ui/readarr_ui/library/library_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Name ▼                                             Status        Quality Profile       Metadata Profile      Books       Size        Monitored  Tags              
=> Test Author                                        Continuing    Standard              Comprehensive         0           0.00 MB     🏷          alex              
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                             ╭───────────────  Error  ───────────────╮                                                               
                                                             │The given filter produced empty results│                                                               
                                                             │                                       │                                                               
                                                             ╰───────────────────────────────────────╯
